# cpp_notes

./: .gitignore  git_notes.md
lects/: notes.md
lects/02. CE, RE, UndB, UnsB/: notes.md
lects/03. Basic types. Control Structures/: notes.md
lects/04. Expressions and operators. Pointers/: main.cpp
lects/05. Kinds of memory/: notes.md
lects/06. Refs and consts/: main.cpp
lects/07. Casting. OOP/: notes.md
lects/08.  Reload of opers/: constructors.cpp  notes.md
lects/09. Static, const, explicit/: main.cpp  notes.md  static.cpp  string.cpp
lects/09.5. Pointers on members. Enums/: main.cpp  notes.md
lects/10. Implemention/: implementation.cpp  main.cpp  notes.md
lects/11. Multiple implementation/: ambigious.cpp  notes.md
lects/11. Pointers on members. Enums/: ptrfunc.cpp
lects/12. Virtual impl. Polymorphism/: 5_7_pointers_to_members.cpp  main.cpp  notes.md  polymorphism.cpp  tricky.cpp
lects/13. RTTI, vtables, dyn_cast/: main.cpp  notes.md  polymorphism.cpp  templates.cpp
lects/14. Templates/: ct_comput.cpp  main.cpp  matrix.cpp  matrix.hpp  notes.md  templates.cpp  test.cpp  unusual_temp.cpp
lects/15. Type traits. Variative templates/: deduction_rules.cpp  (+4 more)
practice/: 5letters.py  bench.cpp  bench.h  launch.json  print.cpp  tasks.json  test.cpp
practice/OpenGL_debris/: CMakeLists.txt  affinity.h  config.h  line.cpp  line.h  main.cpp  matrix.cpp  matrix.h  model.cpp  model.h  model3d.h  output.tga  vec.h
practice/OpenGL_debris/lects/: line.md  notes.md
practice/OpenGL_debris/misc/: CMakeLists.txt  model.cpp  tgaimage.cpp  tgaimage.h
(+62 files in other folders)
